--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "classnames": "^2.3.1",
     "modern-normalize": "^1.1.0",
+    "nanoid": "^3.1.30",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
