--- a/.gitignore
+++ b/.gitignore
@@ -103,6 +103,11 @@ dist
 .tern-port
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+#Junk
+.DS_Store
+.vscode/
+.idea/
+
 # dependencies
 /node_modules
 /.pnp
